[package]
name = "ndexplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
futures = "0.3.31"
mongodb = "3.1.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
